flux/clusters/homelab/kube-web-view/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-web-view
spec:
  parentRefs:
    - name: primary
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - kind: Service
          name: kube-web-view
          port: 80
